# nxdumpclient

./: .git-blame-ignore-revs  .gitignore  Dockerfile  MSYS2.md  README-MSYS2.md  README.md  meson.build  meson_options.txt
.github/: PKGBUILD.in
.github/workflows/: appimage.yml  aur-publish.yml  flatpak.yml  release-flatpak.yml  release-flatpakref.yml  release.yml
data/: 71-nxdumptool.rules  AppImageBuilder.yml  meson.build  org.v1993.NXDumpClient.appdata.xml.in  org.v1993.NXDumpClient.autostart.desktop.in.in  org.v1993.NXDumpClient.desktop.in  org.v1993.NXDumpClient.desktop.in.in  org.v1993.NXDumpClient.gschema.xml  org.v1993.NXDumpClient.service.in
flatpak/: .gitignore  org.v1993.NXDumpClient.yml
flatpak/modules/: libgusb.json
po/: POTFILES  meson.build  nxdumpclient.pot
src/: Application.vala  DeviceStatusRow.blp  DeviceStatusRow.vala  PreferencesDialog.blp  PreferencesDialog.vala  PreferencesWindow.blp  PreferencesWindow.vala  UdevRulesDialog.blp  UdevRulesDialog.vala  UsbContext.vala  UsbDeviceClient.vala  UsbDeviceOpener.vala  Utils.vala  Window.blp  Window.vala  config.vapi  main.vala  meson.build  nxdumpclient.gresource.xml
src/gtk/: help-overlay.blp
src/widgets/: DeviceStatusRow.blp  DeviceStatusRow.vala  FileRow.blp  FileRow.vala
subprojects/: blueprint-compiler.wrap
vapi/: gusb.vapi
