option(
  'libportal',
  type: 'feature',
  value: 'auto',
  description: 'Use libportal; required to support autostart'
)

option(
  'udev_rules',
  type: 'combo',
  choices: ['install', 'prompt', 'ignore'],
  value: 'install',
  description: 'How to handle udev rules required for access to Switch:\n' +
               '[install] Normal installation; suitable for traditional packaging\n' +
               '[prompt] Instruct user how to manually install udevs rule at first launch; suitable for non-system installations\n' +
               '[ignore] Do not worry about udev rules\n'
)
